--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
 }
