--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.15.0'
 
+    implementation 'com.google.android.gms:play-services-ads:22.1.0'
+
 }
